# duck-renderer

./: .clang-format  .clangd  .gitignore  CMakeLists.txt
assets/: duck-photographer.glb
src/: camera.h  main.c  typedefs.h
